# fabrica-de-sites

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  relatorio-sessao-10.html  requirements.txt  start.ps1
.github/workflows/: docs.yml
alembic/: env.py
alembic/versions/: 001_add_business_extra_fields.py  002_add_business_tags.py  620b7b3bfb9b_initial_schema.py  a1b2c3d4e5f6_add_org_tipo.py
data/: .gitkeep
docs/: ARQUITETURA.md  DUVIDAS_ABERTAS.md  RELATORIO_SESSAO_01.html  RELATORIO_SESSAO_02.html  ROADMAP.md  auditor-benchmark-pesquisa.md  bi-frontend-pesquisa.md  bibliotecas.md  boas-praticas.md  cnpj-arquitetura.md  cnpj-dados-abertos.md  cnpj-download.md  cnpj-etl-ferramentas.md  cnpj-visao-geral.md  decisoes.md  design-referencias-pesquisa.md  escala-nuvem.md  estrutura.md  evolucao.md  fonte-unica.md  frontend.md  index.md  plano-auditor-benchmark.md  plano-base-solida.md  plano-refatoracao-frontend-bi.md  publicacao-ci-cd.md  referencia-api.md  resumo.md  roadmap.md  testes.md
docs-app/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
docs-app/src/: App.tsx  lowlight-slim.ts  main.tsx
docs-app/src/components/: Callout.tsx  CodeBlock.tsx  Markdown.tsx  callout.css
docs-app/src/content/: index.ts
docs-app/src/data/: libraries.ts  nav.ts
docs-app/src/layout/: Layout.tsx  Sidebar.tsx  ThemeToggle.tsx  (+1 more)
docs/_arquivo/: RELATORIO_SESSAO_03.html
docs/_legado/: DECISOES.md
docs/arquitetura/: banco-de-dados.md  design-patterns.md  index.md
docs/codigo/: convencoes.md  index.md
docs/relatorios/: index.md
experimentos/cnpj/: .gitignore  PERGUNTAS.md  README.md  RELATORIO.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
scripts/: ab_test.py  comparativo_enricher.py
src/fabrica_sites/: __init__.py  cli.py  config.py  db.py  models.py
tests/: bench_recursos.py  test_api.py  test_domain_guesser.py  test_org.py  test_performance.py  test_performance_api.py  test_performance_frontend.py  test_pipeline.py  test_resumo.py  test_scorer.py  test_sectors.py  test_serper_source.py  test_subsetores.py
(+79 files in other folders)
