[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabrica-sites"
version = "0.1.0"
description = "Sistema multiagente que prospecta negocios locais sem site (ou com site fraco), gera sites e oferece aos donos. Fase 1: Agente Scout."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hector" }]
license = { text = "Proprietary" }

dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# Comando de terminal: `fabrica ...`
[project.scripts]
fabrica = "fabrica_sites.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Inclui os templates HTML (.j2) dentro do pacote instalado.
[tool.setuptools.package-data]
"fabrica_sites" = ["**/*.j2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
