[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabrica-sites"
version = "0.1.0"
description = "Sistema multiagente que prospecta negocios locais sem site (ou com site fraco), gera sites e oferece aos donos. Fase 1: Agente Scout."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hector" }]
license = { text = "Proprietary" }

dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "sqlmodel>=0.0.21",
    "alembic>=1.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.28"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "black>=24.0",            # formata as assinaturas na Referência de API
]

# Comando de terminal: `fabrica ...`
[project.scripts]
fabrica = "fabrica_sites.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Inclui os templates HTML (.j2) dentro do pacote instalado.
[tool.setuptools.package-data]
"fabrica_sites" = ["**/*.j2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
